--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.png" />
-    <meta name="description" content="About Me" />
+    <meta name="description" content="Hello, I'm Murat Bulut. I'm a student of Kayseri University Mustafa Çıkrıkçıoğlu MYO . I'm a intermediate NodeJS developer. I can make a discord bot for you." />
     <meta
       name="keywords"
       content="HTML, CSS, JavaScript, NodeJS, Rynix El Chavo, Fresy01, Fresy Music, LuryCraft, Gladyator Network"
